--- a/blatt6.ipynb
+++ b/blatt6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "8fb1abd9-f6c3-4112-886b-44fe556d62eb",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
       "   • Numerische Werte alle im erwarteten Bereich\n",
       "\n",
       "Auffällig (aber kein Fehler):\n",
-      "   • 710 exakte Duplikate → wurden entfernt\n",
+      "   • 710 exakte Duplikate\n",
       "   • Alter nur zwischen 25 und 35 Jahren → unrealistisch homogen\n",
       "   • Einkommen nur in 50.000er-Schritten → offensichtlich künstlich gerundet\n",
       "   • Viele identische Wertekombinationen (z.B. 28 Jahre + 800.000 + 4 Mitglieder)\n",
@@ -65,7 +65,6 @@
       "   Der Datensatz hat KEINE echten Fehler oder Inkonsistenzen,\n",
       "   ist aber mit sehr hoher Wahrscheinlichkeit vollständig synthetisch generiert\n",
       "   (typisch für Kaggle-Übungsdatensätze).\n",
-      "   Nach Entfernen der Duplikate ist er sauber und direkt modellierbereit!\n",
       "\n",
       "Finale Shape: 1987 Zeilen × 9 Spalten\n",
       "==================================================================\n"
@@ -147,7 +146,7 @@
     "print(\"   • Numerische Werte alle im erwarteten Bereich\")\n",
     "print(\"\")\n",
     "print(\"Auffällig (aber kein Fehler):\")\n",
-    "print(\"   • 710 exakte Duplikate → wurden entfernt\")\n",
+    "print(\"   • 710 exakte Duplikate\")\n",
     "print(\"   • Alter nur zwischen 25 und 35 Jahren → unrealistisch homogen\")\n",
     "print(\"   • Einkommen nur in 50.000er-Schritten → offensichtlich künstlich gerundet\")\n",
     "print(\"   • Viele identische Wertekombinationen (z.B. 28 Jahre + 800.000 + 4 Mitglieder)\")\n",
@@ -156,7 +155,6 @@
     "print(\"   Der Datensatz hat KEINE echten Fehler oder Inkonsistenzen,\")\n",
     "print(\"   ist aber mit sehr hoher Wahrscheinlichkeit vollständig synthetisch generiert\")\n",
     "print(\"   (typisch für Kaggle-Übungsdatensätze).\")\n",
-    "print(\"   Nach Entfernen der Duplikate ist er sauber und direkt modellierbereit!\")\n",
     "\n",
     "print(f\"\\nFinale Shape: {df.shape[0]} Zeilen × {df.shape[1]} Spalten\")\n",
     "print(\"==================================================================\")"
