--- a/Neu6c&c.ipynb
+++ b/Neu6c&c.ipynb
@@ -118,7 +118,10 @@
     "Der Datensatz ist **sehr sauber** – \n",
     "Das einzige echte Qualitätsproblem ist die überflüssige erste Spalte (typisch bei Kaggle-Exports) → bereits bereinigt.\n",
     "\n",
-    "Keine weiteren Bereinigungsschritte nötig (außer ggf. Duplikate entfernen für Machine Learning(nicht relevant für uns))."
+    "Keine weiteren Bereinigungsschritte nötig (außer ggf. Duplikate entfernen für Machine Learning(nicht relevant für uns)).\n",
+    "\n",
+    "**Begründung:**\n",
+    "Aufgrund der Beschaffenheit des Datensatzes haben wir die Duplikate **bewusst** behalten: 6 von 9 sind binär, AnnualIncome auf 50000 gerundet, Age 25-35, FamilyMembers 2-9"
    ]
   }
  ],
