--- a/Indexing2.4.ipynb
+++ b/Indexing2.4.ipynb
@@ -2,10 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "24003ca5-0d46-42e6-aeb2-5445f7808e4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Originales Array:\n",
+      "[[  1   2   3   4   5   6   7   8   9  10]\n",
+      " [ 11  12  13  14  15  16  17  18  19  20]\n",
+      " [ 21  22  23  24  25  26  27  28  29  30]\n",
+      " [ 31  32  33  34  35  36  37  38  39  40]\n",
+      " [ 41  42  43  44  45  46  47  48  49  50]\n",
+      " [ 51  52  53  54  55  56  57  58  59  60]\n",
+      " [ 61  62  63  64  65  66  67  68  69  70]\n",
+      " [ 71  72  73  74  75  76  77  78  79  80]\n",
+      " [ 81  82  83  84  85  86  87  88  89  90]\n",
+      " [ 91  92  93  94  95  96  97  98  99 100]]\n",
+      "\n",
+      "a) Zeilen 1, 5 und letzte:\n",
+      "[[  1   2   3   4   5   6   7   8   9  10]\n",
+      " [ 41  42  43  44  45  46  47  48  49  50]\n",
+      " [ 91  92  93  94  95  96  97  98  99 100]]\n",
+      "\n",
+      "b) 3. und 7. Spalte in ungeraden Zeilen:\n",
+      "[[13 17]\n",
+      " [33 37]\n",
+      " [53 57]\n",
+      " [73 77]\n",
+      " [93 97]]\n",
+      "\n",
+      "c) 3x3 links oben:\n",
+      "[[ 1  2  3]\n",
+      " [11 12 13]\n",
+      " [21 22 23]]\n",
+      "\n",
+      "d) Nach Negativ-Machen der 2. und 4. Zeile:\n",
+      "[[  1   2   3   4   5   6   7   8   9  10]\n",
+      " [-11 -12 -13 -14 -15 -16 -17 -18 -19 -20]\n",
+      " [ 21  22  23  24  25  26  27  28  29  30]\n",
+      " [-31 -32 -33 -34 -35 -36 -37 -38 -39 -40]\n",
+      " [ 41  42  43  44  45  46  47  48  49  50]\n",
+      " [ 51  52  53  54  55  56  57  58  59  60]\n",
+      " [ 61  62  63  64  65  66  67  68  69  70]\n",
+      " [ 71  72  73  74  75  76  77  78  79  80]\n",
+      " [ 81  82  83  84  85  86  87  88  89  90]\n",
+      " [ 91  92  93  94  95  96  97  98  99 100]]\n",
+      "\n",
+      "e) Nach Ersetzen aller < 25 durch 0:\n",
+      "[[  0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0  25  26  27  28  29  30]\n",
+      " [ 31  32  33  34  35  36  37  38  39  40]\n",
+      " [ 41  42  43  44  45  46  47  48  49  50]\n",
+      " [ 51  52  53  54  55  56  57  58  59  60]\n",
+      " [ 61  62  63  64  65  66  67  68  69  70]\n",
+      " [ 71  72  73  74  75  76  77  78  79  80]\n",
+      " [ 81  82  83  84  85  86  87  88  89  90]\n",
+      " [ 91  92  93  94  95  96  97  98  99 100]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Indexing\n",
     "\n",
@@ -18,22 +77,27 @@
     "\n",
     "# a) 1., 5. und letzte Zeile\n",
     "print(\"\\na) Zeilen 1, 5 und letzte:\")\n",
+    "arr = np.arange(1, 101).reshape(10, 10)\n",
     "print(arr[[0, 4, 9]])\n",
     "\n",
     "# b) 3. und 7. Spalte in ungeraden Zeilen\n",
     "print(\"\\nb) 3. und 7. Spalte in ungeraden Zeilen:\")\n",
+    "arr = np.arange(1, 101).reshape(10, 10)\n",
     "print(arr[1::2, [2, 6]])\n",
     "\n",
     "# c) 3x3 Subarray links oben\n",
     "print(\"\\nc) 3x3 links oben:\")\n",
+    "arr = np.arange(1, 101).reshape(10, 10)\n",
     "print(arr[:3, :3])\n",
     "\n",
     "# d) 2. und 4. Zeile negativ machen\n",
+    "arr = np.arange(1, 101).reshape(10, 10)\n",
     "arr[[1, 3]] = -arr[[1, 3]]\n",
     "print(\"\\nd) Nach Negativ-Machen der 2. und 4. Zeile:\")\n",
     "print(arr)\n",
     "\n",
     "# e) Alle Werte < 25 durch 0 ersetzen\n",
+    "arr = np.arange(1, 101).reshape(10, 10)\n",
     "arr[arr < 25] = 0\n",
     "print(\"\\ne) Nach Ersetzen aller < 25 durch 0:\")\n",
     "print(arr)"
